// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a headline with children properly 1`] = `
.c0 {
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  max-width: 780px;
  width: 100%;
  margin: 10px auto 30px auto;
  box-sizing: border-box;
}

.c2 {
  font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 34px;
  line-height: 1.1em;
  font-weight: 600;
}

@media (max-width:720px) {
  .c0 {
    margin: 0 20px;
  }
}

@media (max-width:720px) {
  .c2 {
    font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 23px;
    line-height: 1.5em;
    line-height: 1.1;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        Child 
        title
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a news headline properly 1`] = `
.c0 {
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  max-width: 780px;
  width: 100%;
  margin: 10px auto 30px auto;
  box-sizing: border-box;
}

.c2 {
  font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 34px;
  line-height: 1.1em;
  font-weight: 600;
}

@media (max-width:720px) {
  .c0 {
    margin: 0 20px;
  }
}

@media (max-width:720px) {
  .c2 {
    font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 23px;
    line-height: 1.5em;
    line-height: 1.1;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      The oldest known depiction of a supernova was found in a work of 5,000 year old rock art, scientists believe.
    </div>
  </div>
</div>
`;
